[tool.poetry]
name = "nth"
version = "0.1.0"
description = "Name-that-hash for crackq.me"
authors = ["Adnan Ahmed Khan <khanadnanahmed01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
