[tool.poetry]
name = "nth"
version = "0.1.0"
description = "Name-that-hash for crackq.me"
authors = ["Adnan Ahmed Khan <khanadnanahmed01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
name-that-hash = "^1.11.0"
django = "4.*"
django-configurations = "^2.4.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
dj-database-url = "^2.0.0"
django-model-utils = "^4.3.1"
djangorestframework = "^3.14.0"
django-utils-six = "^2.0"
django-filter = "^23.2"
pylint-django = "^2.5.3"
mock = "^5.0.2"
coverage = "^7.2.7"


[tool.poetry.group.dev.dependencies]
flake8 = "5.*"
pylint-django = "^2.5.3"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nth.settings"
DJANGO_CONFIGURATION = "Local"
